# doob_bot

./: .drone.yml  .gitignore  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  __init__.py  char_api.py  doob.py  env_example.env  nohup.out  pyproject.toml  raiderio_api.py  requirements.pip  requirements.txt  run-tests.sh  run-things.sh  setup.py  utils.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflow/: ci-flow.yml
.github/workflows/: main.yml
doob_bot/: __init__.py  __main__.py  config.py  embeds.py  exceptions.py  handler.py  main.py  models.py  raiderio_api.py  settings.py  utils.py
doob_bot/raider_io/: service.py
salt/: doob_bot.service  setup.sls
test/: test_raiderio_api.py
tests/: test_boot.py  test_bot.py  test_doob.py  test_exceptions.py  test_raiderio_api.py  test_utils.py
