[tool.poetry]
name = "doob_bot"
version = "1.0.0"
description = "A Simple Raider.io bot for Discord"
authors = ["Stephen Onnen <stephen.onnen@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27"
nextcord = "^2.0.0-alpha.7"
pydantic = "^1.9.0"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^23.0.0"
pytest = "^7.0.1"
mock = "^4.0.3"
flake8 = "^6.0.0"
coverage = "^7.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"