[project]
name = "doob-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord-py>=2.4.0",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "types-requests>=2.32.0.20240914",
]
